--- a/TODO
+++ b/TODO
@@ -1,10 +1,9 @@
 Implement Timeouts
 Configuration
 Plugins
- - Machine Loaders
  - Pre-Job, Pre-Task, Task-Output, Post-Task, Post-Job
- - CommandLine Hooks (subcommand?)
  - Plugin Configuration
 Finish Mimicing most of DSH flags
+  - wait/concurrent, show/hide-machine-names, remote-shell-opt
 Clean Up implementation into class
 Make it easy to call as a library in addition to a CLI tool.
