--- a/README
+++ b/README
@@ -83,11 +83,11 @@ Loaders
 '''''''
 
 Loaders are plugins that allow you to build host lists from arbitrary
-arguments. The should be stored in a specified plugin\_dirs location or
+arguments. They should be stored in a specified plugin\_dirs location or
 the default location of */etc/gsh/plugins/loaders*. The base class,
 *BaseHostLoader* in *gsh.plugin*, as well as the builtin plugins located
 in *gsh/plugins/loaders* in the package itself, are the best way to go
-about learning how to add loaders.
+about learning how to add new loaders.
 
 As an example, I currently use a machine database that provides a nice
 set arithmetic syntax. The following example shows how easy it is to add
@@ -117,7 +117,16 @@ mechanics.
 Hooks
 '''''
 
-/etc/gsh/plugins/hooks
+The initial concept for hooks came when I wanted to log the various
+aspects of DSH to my real-time event logging framework. This was
+difficult with DSH as I had to parse various aspects of out the output
+and not all data was easily exposed.
+
+As with loaders, they should be stored in a specified plugin\_dirs
+location or the default location of */etc/gsh/plugins/hooks*. The base
+class, *BaseExecutionHook* in *gsh.plugin*, as well as the builtin
+plugins located in *gsh/plugins/hooks* in the package itself, are the
+best way to go about learning how to add new hooks.
 
 Rationale
 ~~~~~~~~~
