Update docs to show show_percent

--- a/README
+++ b/README
@@ -49,6 +49,7 @@ like:
 
     forklimit: 64
     print_machines: true
+    show_percent: false
     concurrent: true
     timeout: null
     plugin_dirs: []
